syntax = "proto3";

package  pbmessages;
enum REQUEST_MSG {
   Get_Request = 0;
   Set_Request = 1;
   Del_Request = 2;
}
enum RESPONSE_MSG {
   Get_Response = 0;
   Set_Response = 1;
   Del_Response = 2;
   Unknown_Response = 3;
}
message GetRequest {
   string key = 1;
}

message SetRequest {
   string key = 1;
   string value = 2;
}

message DelRequest {
   string key = 1;
}

message Request {
   REQUEST_MSG type = 1;
   GetRequest getRequest = 2;
   SetRequest setRequest = 3;
   DelRequest delRequest = 4;
}

message UnifiedResponse {
   RESPONSE_MSG type = 1;
   bool error = 2;
   string errorMsg = 3;
   string value = 4;
}
